--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
 			text-align:center;
 			font-size:50px;
 			line-height:105px;
-			transition: all .5s;
-			-webkit-transition: all .5s;
+			transition: all .25s;
+			-webkit-transition: all .25s;
+		}
+		.no-transition{
+			transition: all 0s;
+			-webkit-transition: all 0s;
 		}
 		.col0{left:10px;}
 		.col1{left:135px;}
